# Sysmikla-SDK-Django

./: Dockerfile  Pipfile  README.md  celerybeat-schedule  docker-compose.yml  dump.rdb  setup.cfg
Sysmika_SDK/: manage.py
Sysmika_SDK/Sysmika_SDK/: asgi.py  settings.py  urls.py  wsgi.py
Sysmika_SDK/mercadolibre/: constants.py  invoker.py  models.py  serializers.py  tests.py  urls.py  views.py
Sysmika_SDK/mercadolibre/migrations/: 0001_initial.py  0002_remove_user_access_token_user_app_id_user_app_secret.py  0003_remove_user_first_name_remove_user_last_name_and_more.py
Sysmika_SDK/resources/: mock_token.json
apps/mercadolibre/: apps.py  constants.py  exceptions.py  invoker.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
apps/mercadolibre/migrations/: 0004_remove_user_access_token_user_redirect_url_and_more.py  0005_user_app_token_user_refresh_token.py  0006_rename_app_token_user_access_token.py
apps/mercadolibre/resources/: specs.yml  sync_event.json
apps/redis/: handler.py
conf/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
tests/: settings.py  test_mercadolibre.py  test_redis.py  test_token.py
tests/integration/: config.properties  enviroment.py  tests_environ.py
tests/integration/features/: MercadoLibreAuth.feature  MercadoLibreCategories.feature
tests/integration/steps/: steps_auth.py  utils.py
tests/resources/: mock_bad_response.json  mock_category.json  mock_category_attributes.json  mock_realstate_response.json  mock_sync_event_realstate.json
