[metadata]
# replace with your username:
name = Sysmika-SDK
version = 0.0.1
author = Gaston Doval
author_email = gaston.doval@globant.com
description = SDK to integrate external systems with the Sysmika ERPs
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Gedoval/Sysmika-SDK
project_urls =

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.extras_require]
test =
    pytest
    requests-mock

[tool:pytest]
testpaths = tests

[options.packages.find]
where = src