[metadata]
# replace with your username:
name = Sysmika-SDK
version = 0.0.1
author = Gaston Doval
author_email = gaston.doval@globant.com
description = SDK to integrate external systems with the Sysmika ERPs
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Gedoval/Sysmika-SDK
project_urls =

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.extras_require]
test =
    pytest
    requests-mock

[tool:pytest]
testpaths = tests
addopts = -p no:warnings

[flake8]
exclude = static,assets,logs,media,tests,node_modules,templates,*/migrations/*.py,urls.py,settings.py
max-line-length = 79
ignore =
    E1101  # Instance has not member
    C0111  # Missing class/method docsting
    E1136  # Value is unsubscriptable
    W0703  # Catching too general exception
    C0103  # Variable name doesnt conform to snake_case naming style
    C0330  # Wrong hanging indentation
    W504   # Too few public methods

[isort]
skip = static,assets,logs,media,tests,node_modules,templates,docs,migrations,node_modules
not_skip = __init__.py
multi_line_output = 4
[options.packages.find]
where = src